--- a/Pages/awards.html
+++ b/Pages/awards.html
@@ -25,7 +25,7 @@
 
     <main>
         <div class="circle-container">
-            <img src="../Images/Profile.jpg" alt="My Picture" class="profile-picture">
+            <img src="../Images/NewProfileMihir.jpg" alt="My Picture" class="profile-picture">
         </div>
         <div class="container"> 
         <div id="content-section">
