--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
     </header>
     <main>
         <div class="circle-container">
-            <img src="Images/Profile.jpg" alt="My Picture" class="profile-picture">
+            <img src="Images/NewProfileMihir.jpg" alt="My Picture" class="profile-picture">
         </div>
         <div class="container">   
         <div id="content-section">
         <section class="project">
             <h2>Welcome to my Website.</h2>
             <h2>I'm Mihir Sontake</h2>
-            <p>I'm currently a Student of Masters of Science in Software Engineering and Data Analytics at University of Limerick. I was a Senior Java Developer in my last organisation. I have over 4.5 years of experience in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
+            <p>I'm currently a Student of <b>Masters of Science in Software Engineering and Data Analytics</b> at University of Limerick. I am a <b>Senior Java Developer who has over 4.5 years of experience</b> in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
             <p>Organisations I have worked for:</p>
             <ul>
-                <li><a href="https://www.citigroup.com/global">Citigroup</a> as a Technology Analyst</li>
-                <li><a href="https://rosmertatech.com/overview.html">Rosmerta Technologies</a> as a Senior Java Developer</li>
-                <li><a href="https://ul.ie">University of Limerick</a> as a Graduate Teaching Assistant</li>
-                <li><a href="https://ictlc.ul.ie/">ICT Learning Centre</a> as a ICT Tutor</li>
+                <li><b><a href="https://www.citigroup.com/global">Citigroup</a></b> as a Technology Analyst</li>
+                <li><b><a href="https://rosmertatech.com/overview.html">Rosmerta Technologies</a></b> as a Senior Java Developer</li>
+                <li><b><a href="https://ul.ie">University of Limerick</a></b> as a Graduate Teaching Assistant</li>
+                <li><b><a href="https://ictlc.ul.ie/">ICT Learning Centre</a></b> as a ICT Tutor</li>
             </ul>
-            <p>Educated at the <a href="https://www.iitm.ac.in/">Indian Institite of Technology Madras</a> with a Bachelor of Technology Degree.</p>
+            <p>Educated at the <b><a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras</a></b> with a Bachelor of Technology Degree.</p>
             <p>Currently working with <a href="https://bds.ul.ie/members/kshirsagar.html">Dr. Meghana Kshirsagar</a>. Associated with Department of <a href="https://www.ul.ie/scieng/schools-and-departments/department-computer-science-and-information-systems">Computer Science and Information Systems, University of Limerick.</a></p>
             <p>To go to my expertise in skills <a href="Pages/about.html#skills">click here!</a></p>
             <p>To check my interests in technology <a href="Pages/about.html#interests">click here!</a></p>
