--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><b><a href="https://ictlc.ul.ie/">ICT Learning Centre</a></b> as a ICT Tutor</li>
             </ul>
             <p>Educated at the <b><a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras</a></b> with a Bachelor of Technology Degree.</p>
-            <p>Currently working with <a href="https://bds.ul.ie/members/kshirsagar.html">Dr. Meghana Kshirsagar</a>. Associated with Department of <a href="https://www.ul.ie/scieng/schools-and-departments/department-computer-science-and-information-systems">Computer Science and Information Systems, University of Limerick.</a></p>
+            <p>Currently working with <a href="https://bds.ul.ie/members/meghana-kshirsagar.html">Dr. Meghana Kshirsagar</a>, Deputy Director of <a href="https://bds.ul.ie/">Biocomputing and Development Systems Group</a>, and Associate Professor of Computer Science in the Department of <a href="https://www.ul.ie/scieng/schools-and-departments/department-computer-science-and-information-systems">Computer Science and Information Systems, University of Limerick.</a></p>
             <p>To go to my expertise in skills <a href="Pages/about.html#skills">click here!</a></p>
             <p>To check my interests in technology <a href="Pages/about.html#interests">click here!</a></p>
             <p>For any job opportunities recruiters can <a href= "Pages/contact.html">contact me!</a></p>
