--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header>
             <img src="Images/Profile.jpg" alt="Mihir's Profile Picture">
             <ul id="menu">
-                <li><a href="/#home">Home</a></li>
-                <li><a href="/#about">About</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#education">Education</a></li>
