--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; URL=https://mihson95.github.io/#home"/>
     <title>Mihir Sontake's Portfolio</title>
     <link rel="stylesheet" href="Stylesheets/styles.css">
     <link rel="icon" href="Images/favicon.png" type="image/x-icon">
