--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; URL=https://mihson95.github.io/#home"/>
     <title>Mihir Sontake's Portfolio</title>
     <link rel="stylesheet" href="Stylesheets/styles.css">
     <link rel="icon" href="Images/favicon.png" type="image/x-icon">
@@ -402,16 +401,13 @@
     </div>
     </main>
     <footer>
-        <div class = "contact_two_columns">
-            
-            <div class="contact_info_column">   
-                <ul>
+        <div class = "footer-style">
+                <ul id="footer-menu">
                     <li><a href="https://www.linkedin.com/in/mihir-sontake/" target="_blank"><img src="Images/lin.png" alt = "LinkedIn"></a></li>
                     <li><a href="https://github.com/mihson95/" target="_blank"><img src="Images/git.png" alt="GitHub"></a></li>
+                    <li><a href="mailto:sontakemihir@gmail.com"><img src="Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
                     <li><img src="Images/pin.png" alt="Address">University of Limerick, Limerick, Ireland</li>
-                    <li><a href="mailto:sontakemihir@gmail.com" style="color: #B2BEB5"><img src="Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
                 </ul>
-            </div>
         </div>
         <p>&copy; 2024 Mihir Sontake</p>
     </footer>
