improve social contact icons. change layout.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2>Home</h2>
             <div class="project">
                 <h2>I'm Mihir Sontake.</h2>
-                <p>I'm currently a Student of <b>Masters of Science in Software Engineering and Data Analytics</b> at University of Limerick. I am a <b>Senior Java Developer who has over 4.5 years of experience</b> in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
+                <p>I'm currently a graduate student of <b>Masters of Science in Software Engineering and Data Analytics</b> at University of Limerick. I am a <b>Senior Java Developer who has over 4.5 years of experience</b> in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
                 <p>Organisations I have worked for:</p>
                 <ul>
                     <li><b><a href="https://www.citigroup.com/global">Citigroup</a></b> as a Technology Analyst</li>
@@ -414,7 +414,7 @@
 
 
         <section id="interests">
-            <h2>Interests/Continous Learning</h2>
+            <h2>Interests</h2>
             <div class="project">
                 <p>I am passionate about AI and Data Science particularly Data Mining, Big Data, and Deep Learning CNNs. I hope to use my AI and DS skills at organisations I work at in the future. I believe in continous learning that is required in of our times to become better software developers.</p>
                 <ul>
@@ -441,10 +441,12 @@
     <footer>
         <div class = "footer-style">
                 <ul id="footer-menu">
-                    <li><a href="https://www.linkedin.com/in/mihir-sontake/" target="_blank"><img src="Images/lin.png" alt = "LinkedIn"></a></li>
-                    <li><a href="https://github.com/mihson95/" target="_blank"><img src="Images/git.png" alt="GitHub"></a></li>
-                    <li><a href="mailto:sontakemihir@gmail.com"><img src="Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
-                    <li><img src="Images/pin.png" alt="Address">University of Limerick, Limerick, Ireland</li>
+                    <li><img src="Images/pin.png">&nbsp;Limerick, Ireland</li>
+                    <li><img src="Images/email.png" alt="Email">&nbsp;<a href="mailto:sontakemihir@gmail.com">Email</a></li>
+                    <li><img src="Images/lin.png">&nbsp;<a href="https://www.linkedin.com/in/mihir-sontake/" target="_blank">LinkedIn</a></li>
+                    <li><img src="Images/git.png" alt="GitHub">&nbsp;<a href="https://github.com/mihson95/" target="_blank">Github</a></li>
+                    
+                    
                 </ul>
         </div>
         <p>&copy; 2024 Mihir Sontake</p>
